--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,11 @@
       <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
-      <h1>Aqui vamos hacer un post</h1>
-      <p>Y este es el parrafo inicial</p>
+    <div id="container">
+      <div id="past">
+      <h1>Este el titulo</h1>
+      <p>Y aqui deberia estar un pequeño resumen pero no quiero escribir nada..</p>
+       </div>
+    </div>
     </body>
 </html>
