--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,9 @@
     <body>
     <div id="container">
       <div id="past">
+        <div id="cabecera">
+            CABECERA
+        </div>
       <h1>Este el titulo</h1>
       <p>Y aqui deberia estar un pequeño resumen pero no quiero escribir nada..</p>
        </div>
