Finalizada la cabecera con un fondo azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,10 +7,11 @@
     <div id="container">
       <div id="past">
         <div id="cabecera">
-            CABECERA
+            Hyperblog
+            <span id="tagline">Tu blog de confianza</span>
         </div>
-      <h1>Este el titulo</h1>
-      <p>Y aqui deberia estar un pequeño resumen pero no quiero escribir nada..</p>
+      <h1>Dia de los muertos</h1>
+      <p>Se celebra en algunos paises de latinoamerica como Mexico o Guatemala donde tiene algunos platos tipicos para ese dia o tradicones como adornar las tumbas.</p>
        </div>
     </div>
     </body>
