Agregamos nuevas extenciones al blog y le cambiamos la fuente.

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,8 +6,9 @@
     <body>
     <div id="container">
       <div id="past">
-      <h1>Este el titulo</h1>
-      <p>Y aqui deberia estar un pequeño resumen pero no quiero escribir nada..</p>
+      <h1>Dell</h1>
+      <p>Empresa que se dedica ala creación de computadoras que es una delas empresas más prestigiosas del mundo.</p>
+      <p>Y su mayor rival en ventas es apple con su variedad de computadoras que tiene como de escritoria o portatiles.</p>
        </div>
     </div>
     </body>
