cambie el titulo del blogpost
Porque aquí es mas fácil.

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-      <title>Esto es de una prueba</title>
+      <title>Bienvenido a hyperblog</title>
       <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
