No le cambie el color solo le coloque una nave al lado

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,12 +1,13 @@
 <html>
     <head>
       <title>Bienvenido a hyperblog 2.0</title>
-      <link rel="stylesheet" href="cs/estilos.css" />
+      <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
     <div id="container">
       <div id="past">
         <div id="cabecera">
+          <img id="nave" src="imagen/dragon.png">
             Hyperblog
             <span id="tagline">Tu blog de confianza</span>
         </div>
