--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html>
     <head>
       <title>Bienvenido a hyperblog 2.0</title>
-      <link rel="stylesheet" href="cs/estilos.css" />
+      <link rel="stylesheet" href="css/estilo.css" />
     </head>
     <body>
     <div id="container">
@@ -10,9 +10,10 @@
             Hyperblog
             <span id="tagline">Tu blog de confianza</span>
         </div>
-      <h1>Dia de los muertos</h1>
-      <p>Se celebra en algunos paises de latinoamerica como Mexico o Guatemala donde tiene algunos platos tipicos para ese dia o tradicones como adornar las tumbas.</p>
-       </div>
+      <h1>El desafio de freddy</h1>
+      <p>Freddy agrego una nave de specex a la cabecera, y la nave que aparece allí es una capsula de speceX y es utilizada para traer asalvo a los astronautas</p>
+      
+      <h3 id="footer">La empresa que los crea es spaceX fundada por el sudaafricano Elon Musk</h3>
     </div>
     </body>
 </html>
