Agregé más contenido al hyperblog para ser más específico con la imagen

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,9 +12,9 @@
             <span id="tagline">Tu blog de confianza</span>
         </div>
       <h1>El desafio de freddy</h1>
-      <p>Freddy agrego una nave de specex a la cabecera, y la nave que aparece allí es una capsula de speceX y es utilizada para traer asalvo a los astronautas</p>
+      <p>Freddy agregó una nave de SpeceX a la cabecera, y la nave que aparece allí es una cápsula de SpeceX y es utilizada para traer asalvo a los astronautas, es una de las cápsulas más avanzadas del mundo por lo que es muy costosa y valiosa para la exploracion espacial.</p>
 
-      <h3 id="footer">La empresa que los crea es spaceX fundada por el sudaafricano Elon Musk</h3>
+      <h3 id="footer">El fundador de la compañía Elon Musk fue galardonado como el hombre más rico del mundo en varias ocasiones y todo eso se debe a SpaceX y tesla motors</h3>
     </div>
     </body>
 </html>
