Cambie el titulo

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
       <div id="past">
         <div id="cabecera">
           <img id="nave" src="imagen/dragon.png">
-            Hyperblog
+            Hyperblog es del futuro
             <span id="tagline">Tu blog de confianza</span>
         </div>
       <h1>El desafio de freddy</h1>
