--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
             Hyperblog
             <span id="tagline">Tu blog de confianza</span>
         </div>
-      <h1>Dia de los muertos</h1>
+      <h1>Aqu&1acute; incia la historia de un gran proyecto</h1>
       <p>Se celebra en algunos paises de latinoamerica como Mexico o Guatemala donde tiene algunos platos tipicos para ese dia o tradicones como adornar las tumbas.</p>
        </div>
     </div>
