cambie el contenido

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
             <span id="tagline">Tu blog de confianza</span>
         </div>
       <h1>Aqui inicia la historia de un gran proyecto</h1>
-      <p>Se celebra en algunos paises de latinoamerica como Mexico o Guatemala donde tiene algunos platos tipicos para ese dia o tradicones como adornar las tumbas.</p>
+      <p>Aqui es donde feddy nos enseñara hacer un proyecto muy interesante.</p>
        </div>
     </div>
     </body>
