Agregue una imagen al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,8 @@
             <span id="tagline">Tu blog de confianza</span>
         </div>
       <h1>Aqui inicia la historia de un gran proyecto</h1>
-      <p>Aqui es donde feddy nos enseñara hacer un proyecto muy interesante.</p>
+      <p>Aqui podemos ver a un quipo de SpaceX y el fundador Elon Musk</p>
+      <p> <img src="imagen/equipo.jpg" width="100%"></p>
        </div>
     </div>
     </body>
